# repo

./: .gitignore  README.md  package-lock.json  package.json
asset-app/docs/: 2025-12-08_flutter_app_implementation.txt
asset-backend/: .flake8  .gitignore  Dockerfile  README.md  ai-todolist.md  conftest.py  docker-compose.yml  kstock_project_summary.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
asset-backend/.github/workflows/: ci.yml  deploy.yml
asset-backend/api/: database.py  dependencies.py
asset-backend/api/schemas/: __init__.py  auth.py  crypto.py  daily_price.py  pagination.py  stock.py
asset-backend/api/tests/: conftest.py  test_stocks.py
asset-backend/api/v1/: auth.py  crypto.py  router.py  stocks.py  users.py
asset-backend/apps/accounts/: admin.py  models.py
asset-backend/apps/accounts/migrations/: 0001_initial.py  0002_add_indexes.py  0003_remove_watchlist_accounts_watchlist_user_idx_and_more.py
asset-backend/apps/accounts/services/: auth_service.py
asset-backend/apps/common/: admin.py  apps.py  cache.py  exceptions.py  managers.py  models.py
asset-backend/apps/crypto/: README.md  admin.py  models.py  services.py
asset-backend/apps/crypto/migrations/: 0001_initial.py  0002_remove_coincandle_crypto_coin_coin_id_09ff5c_idx_and_more.py
asset-backend/apps/crypto/tests/: test_models.py  test_tasks.py
asset-backend/apps/notifications/: admin.py
asset-backend/apps/notifications/migrations/: 0001_initial.py
asset-backend/apps/notifications/services/: kakao_client.py
asset-backend/apps/notifications/tests/: test_models.py
asset-backend/apps/reports/: admin.py  services.py  tasks.py
asset-backend/apps/reports/migrations/: 0001_initial.py  0002_add_indexes.py
asset-backend/apps/reports/tests/: test_services.py
asset-backend/apps/stocks/: admin.py  apps.py  models.py  services.py  tasks.py
asset-backend/apps/stocks/management/commands/: sync_korea_stocks.py
asset-backend/apps/stocks/migrations/: 0001_initial.py  0003_monthlyprice_weeklyprice_yearlyprice_and_more.py
asset-backend/apps/stocks/tests/: test_models.py
asset-backend/config/: celery.py  settings.py.bak
asset-backend/config/settings/: base.py  development.py  production.py  test.py
asset-backend/docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  crypto_implementation.md
asset-backend/docs/backup/: ARCHITECTURE.md  DEPLOYMENT.md  claude_todo_list_2025-11-25_phase2.txt  kstock_project_summary.txt
asset-frontend/: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json
asset-frontend/docs/: PROJECT_OVERVIEW.md
docs/: 2025-12-08_oauth2_authentication_backend.txt  2025-12-08_oauth2_authentication_frontend.txt  README.md  frontend-design-plan.md  frontend-implementation.md
kstock_reporter/: .env.example  README.md  ai-todolist.md  conftest.py  main.py  requirements.txt
(+75 files in other folders)
