[project]
name = "asset-backend"
version = "1.0.0"
description = "Asset management backend system"
requires-python = ">=3.11"
dependencies = [
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asgiref==3.11.0",
    "bcrypt==5.0.0",
    "billiard==4.2.3",
    "celery==5.5.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "coverage==7.12.0",
    "cryptography==46.0.3",
    "DateTime==6.0",
    "Deprecated==1.3.0",
    "Django==5.1.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.122.0",
    "fastjsonschema==2.21.2",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "kombu==5.5.4",
    "limits==5.6.0",
    "msgpack==1.1.2",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "prompt_toolkit==3.0.52",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic_core==2.41.5",
    "pykrx==1.0.51",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-json-logger==4.0.0",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "redis==7.1.0",
    "requests==2.32.5",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "starlette==0.50.0",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "vine==5.1.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "xlrd==2.0.2",
    "zope.interface==8.1.1",
    "pyupbit==0.2.31",
    "sentry-sdk==1.39.1",
    "psycopg[binary]>=3.1.0",
    "factory-boy==3.3.0",
    "gunicorn==21.2.0",
    "flower==2.0.1",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | migrations
  | staticfiles
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pykrx.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
